--- a/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: monitoring
   annotations:
     external-dns.home.arpa/enabled: "true"
-    external-dns.alpha.kubernetes.io/target: "helm.${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/target: helm.${SECRET_DOMAIN}
     external-dns.alpha.kubernetes.io/ttl: "120"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
@@ -17,7 +17,7 @@ spec:
   tls:
     - hosts:
         - "helm.${SECRET_DOMAIN}"
-      secretName: "goldilocks-tls"
+      secretName: "helm-tls"
   rules:
     - host: "helm.${SECRET_DOMAIN}"
       http:
