--- a/kubernetes/apps/default/echo-server/app/ingress.yaml
+++ b/kubernetes/apps/default/echo-server/app/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   name: echo-server
   namespace: default
   annotations:
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: echo-server.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/ttl: "120"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     hajimari.io/icon: ic:baseline-list-alt
