--- a/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: monitoring
   annotations:
     external-dns.home.arpa/enabled: "true"
-    external-dns.alpha.kubernetes.io/target: helm.${SECRET_DOMAIN}
-    external-dns.alpha.kubernetes.io/ttl: "120"
+    external-dns.alpha.kubernetes.io/hostname: helm.${SECRET_DOMAIN}
+   # external-dns.alpha.kubernetes.io/ttl: "120"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
