externaldns debug logging

--- a/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
@@ -43,6 +43,7 @@ spec:
     extraArgs:
       - --cloudflare-proxied
       - --annotation-filter=external-dns.home.arpa/enabled in (true)
+      - --zone-id-filter=399537a1da4ab599fac7bf35849ee71f
     # txtPrefix: k8s.
     txtOwnerId: ""
     domainFilters:
