--- a/kubernetes/apps/default/echo-server/app/ingress.yaml
+++ b/kubernetes/apps/default/echo-server/app/ingress.yaml
@@ -30,3 +30,16 @@ spec:
                 name: echo-server
                 port:
                   number: 80
+---
+apiVersion: externaldns.k8s.io/v1alpha1
+kind: DNSEndpoint
+metadata:
+  name: "echo-server.${SECRET_DOMAIN}"
+  namespace: default
+spec:
+  endpoints:
+    - dnsName: "echo-server.${SECRET_DOMAIN}"
+      recordTTL: 180
+      recordType: CNAME
+      targets:
+        - "echo-server.${SECRET_DOMAIN}"
