--- a/kubernetes/apps/default/echo-server/app/ingress.yaml
+++ b/kubernetes/apps/default/echo-server/app/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: default
   annotations:
     external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: echo-server.${SECRET_DOMAIN}
-    # external-dns.alpha.kubernetes.io/target: echo-server.${SECRET_DOMAIN}
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
