--- a/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: monitoring
   annotations:
     external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: helm.${SECRET_DOMAIN}
    # external-dns.alpha.kubernetes.io/ttl: "120"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
