--- a/kubernetes/apps/default/filebrowser/app/ingress.yaml
+++ b/kubernetes/apps/default/filebrowser/app/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: filebrowser.${SECRET_DOMAIN}
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:floppy-disk
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
