--- a/kubernetes/apps/default/weave-gitops/app/ingress.yaml
+++ b/kubernetes/apps/default/weave-gitops/app/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: gitops.${SECRET_DOMAIN}
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
     hajimari.io/icon: sawtooth-wave
