--- a/kubernetes/apps/default/filebrowser/app/ingress.yaml
+++ b/kubernetes/apps/default/filebrowser/app/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: filebrowser.${SECRET_DOMAIN}
     hajimari.io/enable: "true"
