--- a/kubernetes/apps/default/whoami/app/ingress.yaml
+++ b/kubernetes/apps/default/whoami/app/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: whoami.${SECRET_DOMAIN}
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
