--- a/kubernetes/apps/longhorn-system/longhorn-system/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: longhorn-system
   annotations:
     external-dns/is-public: "true"
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: longhorn.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     hajimari.io/icon: cow
