--- a/kubernetes/apps/monitoring/goldilocks/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/app/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   name: goldilocks
   namespace: monitoring
   annotations:
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: goldilocks.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
