--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -117,6 +117,9 @@ spec:
       annotations:
         hajimari.io/enable: "true"
         hajimari.io/icon: "chart-scatter-plot-hexbin"
+        external-dns.home.arpa/enabled: "true"
+        external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+        external-dns.alpha.kubernetes.io/hostname: grafana.${SECRET_DOMAIN}
         cert-manager.io/cluster-issuer: "letsencrypt-production"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
