--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: monitoring
   annotations:
     hajimari.io/icon: mdi:kubernetes
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: kube.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
