--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   name: traefik
   namespace: networking
   annotations:
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: traefik.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
