--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:TIJsHO1K,iv:CsYCbwI48mhNbVTEUZJZSP3HzU8j3ZYidX8BYdxvGfI=,tag:V/3jfpg6NLqLUt3/9tCuFA==,type:str]
-ansible_user: ENC[AES256_GCM,data:xsmF4/iA,iv:7UQwGJ/A29I+GK9b6jZ8CfsoHXKzN8RvPjS8vf64vLE=,tag:AFyWLBYjMFIqAMI8CCsvZQ==,type:str]
+kind: ENC[AES256_GCM,data:3w9WK38/,iv:rA23hoUbtrUWjBWWVBJn2wcKyz0XBvKdPhN7MZ36q1Y=,tag:CCBTI2qUSu9d+mTtNb2TdA==,type:str]
+ansible_user: ENC[AES256_GCM,data:lSzv5xNe,iv:RFWgGQ6mbLYhPOIRT6aIptoh21bMp33dKkMPePYfDqM=,tag:CNixjdZ8zO3ThErIMVvhBQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS3Ewb0hDb2h2NnY2d2Iy
-            TmtLMWhReitLR2VWMk1LNlhZSlRPcEVzZFVzCjc3M0toOXlmNFBTL05zVUNONlhh
-            WG5WT1ZaU0diSkhCVXdObGFNQUtjOVUKLS0tIDYvVjZ1OWZHWkV0WW5GZkV6bjQ4
-            UHhReGo3WE1pcXdqck96QkUyUzVJbm8KM8IiQ56o2TPaXzfcjuQNszAx/GtH5Nei
-            mxZcACh8J74Q+2Irt2t2dpIuRMevkI0oiKgW36kkrB8lyq6ieqP1Vg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeTE5VWFoV05VcGFlZGtE
+            NDJQZm0vNFlHZTVaRUIzNzZnTzlUd2did24wCjgrTjRYem53TVIyRktySFQ0bGNl
+            SWhBdzNMTk9YbEtoUHltYzQreVplTm8KLS0tIERRcnBvRWo2OHAvSERib3BxRU9t
+            dUgyTEdxRDVTZ3hwU2NEMUNjWEFidGMKpRPaXn26NR7Bmw7ZPnpA9IHqTyfdkLt6
+            QcSklUuxcbrkoBX9Jeo2C3602yRF9WSF6q7hcGXxwmT0Bl71C9Qs6g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:qwkyW2PCaY6hNshwfH+zswTNRMYl5IQAqHcDTUpDPcHZDcPBcLSqCCE4FuxO7mtu1gL0FT9ZOnXX+Sws/ZaToeFDrK5ox4xFC5XCyz2MKEbcB1nTZ6Mro60feLUClW8r2jr7Mx/ycR7hhVzLZdIh9DQPprrOCy2bVqZ0K04Hj8E=,iv:AikP/a/PaT43TK82/Du9IuJG0MkTADjr9mjV48OMKzg=,tag:BF1UQk3d28Gm+q5GdhvySA==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:PiJui0BxzwWRFAzTL7dTWUQ/IkNiZBUiqXUzkM0o7sGoz0NeGuDQhcSWOa7BU0sX+JVuevfKFjpAZ6umVedOni5GIio0rdO7BWSv9iG4fqsrGXVD7Wrhsfic/yCor4SGFVBEqB8MEhYtEc2IICB1y9gNupnlsRhhqKXMhNf1knU=,iv:yaryhnJ2cGCex2I/SJw3uhfG6uHcf01aBSTK4nnhueI=,tag:tq/96+H4EZuRd1cqbxylkg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
