--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:IWczCCNM,iv:rsRLdlRYRNX/0MgOApV6buLU+TXSuzTl6+KhugK9IIQ=,tag:Rx9cG9Nz3C+xWeI0pG7twg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Os03o0je,iv:fpjsY02IVm4kYjQmKiUwuLbhx+WHB/hjO9dONZC+rKI=,tag:hcrQsM8i2KcVKnxuoqVOOw==,type:str]
+kind: ENC[AES256_GCM,data:3V0s2S1P,iv:waPWdPub9Nx8+AxOqig3UafxDP3LafTn91nJQULUonc=,tag:Mf2gpTooXAHrLfzaz0i/VA==,type:str]
+ansible_user: ENC[AES256_GCM,data:TFou7brW,iv:QWyYkzMKWDfDnvKUq2j0mFWn9zcCSiYQ6RnkDCLhC+Q=,tag:eRSuYOqaBv+ZOEsfvWM+gQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2clNCUXkrRlR2Z0w2OEhW
-            R0xNdEtBVlU1VWNBN3Y0K0llTWU5aExSWnlZCkNmMldFTjZMVTdxYnoxdS9kbW5B
-            TDBqQ2pSMGw1SE5QZkdkNzFScE1jNmcKLS0tIHZ2ZS9yNEU5ZU9takNFZUZQYTFF
-            RldSYjZzdzdzWGlhaEJCNm5JQVVnaGcKnKkxTaepLtBAORGR3Y0Z82TcmPvMQPZS
-            IE/Mmik+4NjBER3a4kpcvVioctCqMTGQgo8RzfZZ2Nnb+tzPTksTZA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvbnVpbGtwRFRHVEpOTVRj
+            S1Bnak1ndG80WUlwcmdEdUZhNDFaWEF4bjJRCm92ZThvanhIeTNTYTl6TjVERVRl
+            NXFJeVNCQWNqUE1MQ1NWVmcyTWprOFUKLS0tIDVqZHlEd0tIajVBTEY1cmJtYk0r
+            enI3eC9EY1ZYNlFld0RHZlhjSmJDc1kK2+3bv6d5fssAoPENo/ha181i3gbHCa9c
+            6+7ZjmmqES0ZBZEclsaG+ACaiOzMbrM2Q0peDBLbxYGpAVURhEwN9w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:0MVvuf+hRcvNw+eO8W97+I8ZKHLDAKXR0hpp6ozrT1wzNrcDBkszBM8Jft5aLnfmtRUhlmge81/WCaglge6Dsw6nKbnzxUNepRHEidxi0JGlP08Y1HMI4bscZzLdfYbZBOooEfm9eaW8aL7vu0LXond3B0JTRnAWnFaJ6igSdDw=,iv:Yqxxy86S5AGkk6ThKEimY8P0Pcp2/CjvBVBcI/Yf74M=,tag:NbGMZh2OVl7EsGt/YJXgJA==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:mbpX9VRyjy7Tr6exs7gz3R91LLXOb2rDDbkPla68ytGBEd/DstFLOU7ZrVIzaPzSRbM9IGj3gktvXevxyNmJ/qR/X5q7Yp6/40F0t4zqkdvqYqojprSiD6lABNcc1wh089R7vmVb4/4coxlDxaH3QLVEJj07YkDGABBVBJxXPwk=,iv:O2eE6IbTBibCer50wNTAKCzCDPPfnU0fY62dy5SaY6U=,tag:XGJE8elaynqm/sA1g6iKng==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
