--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:MTdZwNWC,iv:PeoQUWrAYDXh5Xy/i9S13RUznzvkuJWJ/rupn54BUmA=,tag:oHMU4c0LDhlQCKDun18HXg==,type:str]
-ansible_user: ENC[AES256_GCM,data:q4NA3bEV,iv:1UocjQHhF6gjjCkloQwegkykq5avjTYcpU0H698xuIc=,tag:WLrHPzGau1zMpftAVSfIyA==,type:str]
+kind: ENC[AES256_GCM,data:ahYSx279,iv:PHxNCBbF2Ms1JNb9cwO3p/9+ad84+2wz80X6V1p3jVU=,tag:DYipn9YssrwR2ujN7/D/tA==,type:str]
+ansible_user: ENC[AES256_GCM,data:H78JFuy0,iv:rSgEkd0kvUy982DUm+wFNpflnR+xY/A6Tx+QCBAzMp8=,tag:qnQ8Z0IKAZEZJenGOgxzew==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcndTTVJaMVF0bTlYWjB1
-            Z0FGWDRWbk1XQ2E5WVNEQWNadlN2VnlsUnlBCm54blFyNlo0a0RiV0xMSWc4azY3
-            Rm9vTGxpUDdGZDJHbEJXc1dNQ0xRNEUKLS0tIGdLeU1wM3I5cXhmRlhGSlNCMkls
-            N242U2lyR1hOUHdCMWwwNDJEL003V2cK8qxguY6lsmx+D0FvqlhiA6nU1bk+Bldr
-            CDcLwiZwhgTJPgwfj88RrxUG/FeDo1JpoXzuSzYFefj3RhHyL0ky9A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPSmpFYVFBcG5oUkNtcEpn
+            ZlNVWmF2dmlQMWRrR2ZyT0lFUUg2S3ovOXdvCkZmMk54SjRkSUorZkQrQ3UwMUVv
+            ZFUxdXVxRWlhdUtJLzNUQmtJZEVwamsKLS0tIDhDeWFId1kzYlhsYVpvbGZVSm9I
+            WlB4QjdPNTVZNmZKN1ppb1NucEFCV2sKD0oxw9h7M5LCkD9JldNcOIzicu84cZsu
+            Z+frdaQL+vY5yye8uXFmnwjF4BUNIYUTpz1qPgfEZYeNMfTWyQ1ryQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:+GEMpcmz8KN6L8TDHjV1asBc7fHSkcNoFfEDbGPg5rDJ7d2T/PdwA77sGRxMFNjXZM0hh483PpWYX1Mb87l0268QMYSNhGm0OJlMdSF3IYCRGGaSK9tShZsIUuWlqoozxJJ6pVpHxI9dhmhSvKp/2lx0+M9hFxgqkjz0w1Re5tw=,iv:thaRpkKfVcTCqDKhUhzj+fwS9v2tbt4EDVQE9rEm9qg=,tag:jXG//h5Lp+W2+uSDu7eBLQ==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:c5b5fLsSJj/U5B4atlXmXKrm6djD0bLRdKZ8nrZsseUJxBEcgvVdNxyg4y8qwWq9Qh2l7ksAqhqW57E/++quIB8LhlPNtLZAQr015J/MnEm7MXCdvrsJOESb3RcJM2cpzS3uwLKuuTHu0KDGuDj6fKkxOW2OL0UtGyQDZ5gUsFk=,iv:u2dwunGl31WHS4nmBgkvKnHeAFkTB+lO+RBEUVxhPnA=,tag:MYczgDbAxDl353txz0eh1A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
