--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mW9Sb4zu,iv:ytbhAmIHhb+kT+DIcsrbMWZZRvmrObU8nVJmPSEkUSE=,tag:xwOHcd2MUx7370lbhaRH2Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:zAwV/Thx,iv:xclqS8qis0ID/ESGYEZkOhNtfgSjPIHckqPStoHCbj0=,tag:XS4czCIMYq5Or10WBO/SGw==,type:str]
+kind: ENC[AES256_GCM,data:zhRne1+k,iv:St2VeEAgO3M51yn/n9Fexdt5V6X7FT70yAtamBY7l4E=,tag:Yu0yvdfM2jaq0VYsCjDIpw==,type:str]
+ansible_user: ENC[AES256_GCM,data:j5PVMsfe,iv:glCp1gtc2cU9dUKq2/RCVcokx4m9h/8cR8NXWdTWHsw=,tag:+ovvczpz5a1Rz1pk/Zclhw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWNUl4LzlMZk5PQm5wTjEz
-            T2lobUMwSEZ6MnkyQXVkemQySjVnOENoNFJFCjE1ZjBEb0tUK2Z5WXVVZ0VQczFO
-            SFBvbEozWlh4YUtNalVwU1YveXZMM2sKLS0tIGU1a0Jjanpjc0VMcFNKcmZtUlJk
-            di9ZcDVnLzNoTWFuczZxLys1YzIvcDgKQ/ydS20IIw5PG+rHXbvZOioJKtB1E738
-            YeUjc5DWZAKT8/8qQiYUdAES/jENScLnbhVABtT/1o/3OQgCt+pyJw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXQTV4ajFoWTJKdmhKVkl4
+            T2IzUHQ3eUcxeS9wU3doY09FS21ZOGZPRjFjCnFGNEE4MnZoZzVPVkFka2RKWFRZ
+            RzQ2RnlDQk5sTnNMdUY0RTBRSkptejgKLS0tIDQzZFN2U2hHVUpVdWRGUGEwTExN
+            eE4zU1EyVTZiRXFvUDVsN1FaUEliYjgK+MeTRPAoOCa2AV+BNFuatnRAr7GUWK+J
+            l2r8x9nQroBXfUqkjCqi/spa2dxLxNGTECnfNFAkniM9S1Fvn0HsRg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:QTL6oK+/FXENFk+u3HDRQTFUbM1qaFSrLzTBa588wrNrfHh6BVTxEq+gCiAKqjRxYKbcN4E38fCQF2wam76JsD4HEJ/4SU+XsOkGZF9STeYO7phiLGut09e3bzxhdWlVWj7un6L4jnLOrDEpEb1XLl6wodUUI703ZmZwGaQGGT4=,iv:s7AY0BGBtUGr8jYO9dimkpnXcIxB5GGD/v9qZcw8KgY=,tag:+7PK5zuKnXu4ZuhFCGc7YA==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:38vW4gMM9m3iGYQl/i4Ihf8OX/0jFXC0Nf1eXNaID6SicyQmZD80WQaIc+sqEA39/pVWI5RbdsJqfMkd/1KqCdqcbWFYrD6LZGazIGafBpAnGp5VkEm1KT2VmT3bDznrT3zCiN0xZ6/u61v34dn7sROoHoDLvyc/kqhGWYkmqAI=,iv:KM9YTHkCECANejzz4gu8Bsu3I0D2Yfo7aJHOPOtWrnw=,tag:qJssijn0Zb+de8TSjvx3mg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
