--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:aAFYMPhg,iv:shOrnmxprvWQjHD2vPw9B9IomsqYSHU6W3RoMR1H7ak=,tag:ReotXa4APD6bBf8wqFfnkg==,type:str]
-ansible_user: ENC[AES256_GCM,data:yWQnTabX,iv:1Bd7sfPnjYKM1XMDnl6j1iNVcICCFetwN4e4NRtFG+Y=,tag:s2LCyWfT/AUHJPRfSYhZdQ==,type:str]
+kind: ENC[AES256_GCM,data:8lE8carl,iv:HVCvORcVTRqLPS2+wO/REHhnAIjowzOpelaia+SYQ+8=,tag:73PvzwPwMVF60TBrDcgwwA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Hkf0ARGP,iv:yFG9hb/kKBgQsWx0hOYJEiP6qk+wwhbCj/4ZGfu/i6k=,tag:Zvf34zuhgfe8g+2zG7zN3w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMlF1NHJWazRHc0N3UERk
-            d1MzQUNKQm1aN0VLMERva1BxdUM0VUtxRjBJCmQwb1JTUjQ4NFRidVk2UTBsMXQr
-            azcxcFEwTkkzeFBXYjc1UzYybGdncXMKLS0tIHUwN3cxTFNOVXRNSWFtTEJ6cms4
-            MGJOV2Q1a0NSVGR6L0lQL0xBR0U0S1UKVLmRhdsWCh4a3p097Bc8GXffP4jY90HK
-            XWD4an4Sb5B3CfLOMc4kPahhIgsPso1q6DKntfhydEPs1d2nzW6aiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPNStCdDhZRG9SaDFjRjRw
+            TUlZaW9Tbm03T0hpeE5IZ3M5NkxNbkliVFQ4CnhFUzkyTmU4ODFqMHdPdXdOSEx0
+            akVBV2I1UXg5QlJXMnRORklsbHlyK2cKLS0tIG1oZmhwUUJUcHFydTFhcHBYeFRj
+            TlVqamIxY3d1aTQ3SEJlZ2dDaTU2R1UKgdpd3/MCPDcNRu2+x05WIqXMAJ4dUuLG
+            aUxpedcxLSuRTBZHPZDp/6jnnbl57Ha1MOx8nR5mZxLQwNHtX7JT8A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:y83JLQZ1JGkmYKPc3iNQU4BaxYv/UdGcOgFeEA9e2BXo+YL6ihlqUDPuRmjiAILFZhPOE79P+yoxXa35fwVQkBbyI1ugsCDo73hwyu0MsLYLRtXXEFObCxKwYWSklT2BbzLzjYD8ftC0+pkTqu0zkTOYx99IAyFiEJcwtgmQ7Zc=,iv:Evcvhk0Mq2CAZrvEV9GpwjwL6BOLLUxM7iMabNZCrXc=,tag:/Vuhkgm9f8SZHlsCX+V6aw==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:J83akqaENp3cjzpDaKumBixyGd0w452ghmMxpK6rrj+8ptTAnMTJTzXetubJs9CDzQ/vGff4sYHmDdtAk+UCGPiv+mqaazcVitgTGuZ+KIZN2xtsi0tvuHPFBFUlgX+8e72N2eGw/CmjrSSrkCkqPuAALtMnpwzMuEhVu65/XUY=,iv:F6RAFBSkKiGA6Kf/4kh5k1NTvUqPXcbcmEu7TTQShCE=,tag:sAUc1HVZEhevRFU+p2RGKg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
