--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:NDbaDCBf,iv:pmA93sf9iAYpWKwarLLKi0d3jrDPZd9JvK7l9WEgLlY=,tag:kzeYHCl8REyHYx/6u8lgoA==,type:str]
-ansible_user: ENC[AES256_GCM,data:JRK4krWB,iv:TdnhU3RXkN2HFxs951/+jT4mQxXld1kFr0VDjvDvL9c=,tag:OAhT/DShEYg4kMQk3OL0Zw==,type:str]
+kind: ENC[AES256_GCM,data:mu7x6y5v,iv:SeGYpvbVkcE4vSA0LFTFvV+wO/ks1zxNnUL5N4ggWJg=,tag:pQdYRNpOizRi0QtD9SppmQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:EkdgDxsM,iv:I3UuGiNt174mFN2PCFv9ENqv4XfsWtSFvpbQibimOpM=,tag:K33jUxz0iKfhdkCr0ZsP8g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSUR6V1g5N1JwRjQxc3J3
-            VG11dTlRbG93dGMwTHF2UndTMkJPYTNtN0ZNCld2b0hrVnBuN3QyYW92RGU5VDlr
-            UytTS1NWVzJ2YXl3RkpSZXlsSFZrTlEKLS0tIHBvVjJwR1k3RVAvbUFBTG80Umsv
-            MURTdDFBSWpXVmRJU0djRjNETWQ0OUEKpl/PYDRAdYRYog60z0IjpawS1gdtUva/
-            nnyaquSkUTDY5hnxF1w+3k3tyJFIrLOJNLyVI2wJEPM83cWARWRXlg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZUkt5U3VVWExrWFpOOUpu
+            bVNFelByVW4wSktZQWIzUjZVZ1lNMStnRUJnCkRFOHlXMUdPeVJmUVhqNmYrcERl
+            RCswbEQ2MUtUR0hWb0JRbVM0clZaZmsKLS0tIHhrUEdINjJEUmw2SnUvVXFTaHc4
+            SVFoWVU0U3p3bVp4ejdjUU1kbWZ6Z3cKJuuJMxdwZQvpOsd85BeVOqp9exUyBcbb
+            9q+RO4p5SSgXyEwVfcxAKZYkkQbg8L7so3Fn7VbjXDW62zHN/yr5Pw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:/xOJHzjqlWbOaxBQJfA+KHbbykU9AwvkdF7lsfArTwJtkWLVnF6ifbEcMqfn8w+Iuzff54Aku77z6sV9eNppIQrDtBX1HkCIo+154l+pg3s4OOp+hy8U5P9WJBZsVldVIXRR2MrjvtIZJyTytiNQKgS7U6OTXMnCMYoWM2dmxFM=,iv:wp4ql2KggnyAWWBniL/W7s/CxZ/jbBSX0Nke7ZzMj7s=,tag:YRXJZzr+UacoPas7BY22bw==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:mq774hqLU4T0xHvSyOjzO5/m1tR+bcobWtZ5ny6A5C8H4VyQ7+b7IT0n0qnLKvUngZaN69WOiAdwcogZ1xwP0DSDbQoa+YGP+NHPNIacB2csp8xp8EEkJ9iiXsh0f2D7Qz6XLm0reRoNfpsJ871JbSsju64Fw5RwSxZJ/LEG2xA=,iv:2bnJMlmur9g447Xn9dZuZe/R7EbANUuOP7zroaht/3Y=,tag:JTH6QaHZaQ1qT4D3u+DA0Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
