--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:UGD0gS5FUAMaoBjqgXMkb9t+xQCF,iv:ZhKIpUHs9O3WDgYscTkijtgAyjzMH75+BaRtMihwK8I=,tag:t5Xh9lFiu5snb+VAgjSF+g==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:gM/U6l1zEn4+3CRQVzA7k4ARZvc0EGFGOItV1hdlFdk15Nbotw==,iv:10mtRpMS99s+dgYJQYwM6Fh0Sm1XMiKtPkGBv3gN51A=,tag:NRzhZ6JoB/aqcTfKrnafXw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:vdJAXqLD0x0laq8=,iv:PEdwguisRc69uOonM9lqJffFvjlCiGZ5qeICuu+xMcc=,tag:/CGdNsmpg5cI4gmYn31OBQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MRe1PKyz37fSPa8+BwVFMpONm0Af,iv:sL0kv2xGHMzEvlO0iRcCw0mrzedrnNMGaPLT3Y3kvPc=,tag:tvrX/YdaVIR5c1AcecWYpQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:mE4kWULIWCH88Usjiafw1Cv+kFGEK99DfMkqpC7a8ilWWmPvdA==,iv:0Z1DhSVCafptOgAgkJMU/GtbAK/kzfG/qZk+pU1ZL2E=,tag:MSjJ6HwpNaORpjVSjbJ0aw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:J8ild2sd5i116s4=,iv:0tEzyT9Cusr2aRQWOEv10u3EBi2vwla64QBtavK7Da4=,tag:/VU7xMYocXXLr1Djtz7PpA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYMWluandDN3lrOXNWaDcw
-            aGNVZldXeE1oNCtOM0Rld1g1VnQ2U3hhdzFNCnFoMjdpV2dsV0pWa0xhdTZncFg1
-            Y1lEMlMxQWV6bVpINENRUHFXeUtMU00KLS0tIGNLSkRUSVh2UWhaN1FqaVE3VWlC
-            KzVaTDhldG9aSEd1MkZyOW5LaW5VL1UKQ5fRmoX3OwT1CyYqYxp2N8aGSfFdOy0W
-            mU5ADR5z1uf8y8nuSirCP1YzQKNA1dZYezkNvuhXr0+6S1Ui5cpKlw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByRVpTSmNpU0ZBZUNxbEJz
+            cisxc2hBcGd0RG9WTjFCU0tCUmp0NDcva3dBCmlkYUF0eGlWc01VNHRZcDlmc21p
+            ZDQ1Z3h3cW40WmlFUGlPWURYNGNnaHMKLS0tIDBhRnphUHo4Z0RqT1EzQStwa2Nw
+            L3M0Ny83eVd4ODRvbnhSeEQ3aGdLUU0KRXzYHX5zEOxS9If0n87YQeQnZqMxgNrN
+            Q0ZGvdU/XAMbUC9dnpw5MM9zvftaA+UVgUG0KzUtDK0LhVFQlSFjvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:bhQHQbbUXKi8AVoZnlsf251+VoqfDcZXKwYxLjcEeK9ZtFb6BJhtG6aJ4Z5nONiZEn6tN8V6f4Isdxe7M5iC+E+pzdRQNRUFTGP4LxpJGmqj6AMAdbvCzc414Y69sPV5XdwUsbnTaTDYUJlEBDbccrwTWwCxMvyIL6RV6bHxpSM=,iv:YvCbfZuSzBgzIBQy8++hB4EuTWOiZ224XdAQo05QUfQ=,tag:O0Yt4W3+iNe6BC2e0Rwozw==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:56YMq0r8s1tusDnGsrZUGemrn7jBVsC9zYSlQge0cVQ2Kzh9YLKDN16yA+nX3RLSSUFigCmnR2zL0vmZGYSD5n4nncZArnFAg9h+dTDDnSCW+sgxCMuvDaISBnmOhGVyuG9AWzUNg+2Fd4T4m7JeoBnDcPD5r9kam2I+wsYK7SU=,iv:55qxxMup5h1oKQUThVpDm0aaXp3XvWii4ZqjSYCkTek=,tag:GlOKUuq2luboc6y21Qdr/g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
