--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,28 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:ycoAwtnp1/kDEa0=,iv:6+25w99vz9aLNfeznQScyZkirywgQykt5+FDLn+tgIY=,tag:QaGXgf/rWzGvR5tJpSo0aQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:IS/my7ryM67WOgqK8t7QWRjUgnIc,iv:S12N9RZoFrNG6vLrBd/D55P6zo3q99B4CrTW0TznuwA=,tag:PooJmimVWu8vbJ/2NlwBTA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:F3DpvxRT87Un28Cc79wh/WtJCR/TWZ9HXHq3UUC4xHhnWCXA786zKaRwqk3qXS48OHu91uNjApZkm6vqUGC302mQ6Kox7Y0=,iv:V2kt0DT7dDv+8FxxSnToILoubocMBmOF71Uc6qiv5ew=,tag:/R90xrrAwx+acH1IUo6esA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:6qwqEP/grTsEWhFx4GDZvlFWgoU0PFzXkbFx1GjOhXhkPJE=,iv:9PkS9VK3OT+VSQfQ/2y87DobVPBNJKrvBQWpYIhAtCI=,tag:0g7TYTvHxIfxCwCI2luMew==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:A+WEJtUW233/ndUBl8cMeh+ETg==,iv:qrz3f37Q5nHrQvjtVrZ6KbJAt+yj1Z7JXD3UNKpa654=,tag:trubt3IJ9yIBwFLxpfwROw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:vG29rrVHm0LgoauRwU/GPu5DFiKr,iv:WneQL5Q/cgI+GOfY0X8u8JBY4lA88QCeU/PxpcoaPqU=,tag:Vq+Fu8YrwbXBE6hNTT2/1Q==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:T10w/WX7D8Y=,iv:gaX/N8T1daDZpYi38sWZ0k/ErvFJ0WlRVwJPPvTqRI0=,tag:PxnQ6iZLT3nb3WZqUmFtng==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:m8uVQ6ktzXg=,iv:L5lhPCkc34TRg+BkKJARw3EcSB0qjoknqg3HvKH3V/M=,tag:nYogrbGwxuAhB0wh6fXHTQ==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:9AomuxRSfpM3Rhj5cJCh03wZKVbUSkM45D7AMMr63fNb5Mr884jS4H6KqjYxgzz2MCaKJRuG8V0vV01p73ppow==,iv:i+6yOY2tbwlOPGZ6RCMu4E73zXExP2j6foIEiLTL73o=,tag:jIHm3kELD5BJg4Xs1eTKZw==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:OJRXEE13d0tRfGkGlBw3SMV8xy/so8bhGi1gx0WJHjcLS5I+L7oS9cxDnnt7Db6L08tCoX7AmhDBk2Mh2QNrow==,iv:jXrwtY2qjUVETM1Vg76SakN+7VfGoN5XI2sLWXSQ+CI=,tag:sPRp9EAH8HEiIen6MC4j8w==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:y2pn1O6DHytL,iv:+G3Mtxf2mxd1Pn9s5dCdQ5KKpv9Jt2a+zyFT9yO9XAU=,tag:Tf9BKIQ6Z8pu7m8A6NfImw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Faf8zF7W7NZy6Zj5SuLa,iv:E44FRovbiVRYmPD/JjoWsfYahC2oGWjqDskRXKjiDTg=,tag:8alG3tjO/siIhumiHQ4C5g==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:fWpEM7/lIjIY0IJAYnyt8JEzrQi8uK5hu9acFWXYzx8elljF4O3Wji9FgEnizgD/TAI=,iv:0rIFDzgIkE03jlmzmVK2sgqegRfEMm83OLnVzXeTjlk=,tag:fYGT0l1HXExXwriubcE7xA==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:l78xuy8wi5dMqMMAyk8=,iv:2xB7oG923OIqQ7gyZ09taDGpXHUyqEC6EHBseFIjKog=,tag:AabmIdb1ToO6898GfTuv3g==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:mE0DdEJqRSRorMs0VZKpYFaelt8=,iv:8sckx4OJ7Kl9RvN4rDc66JNuU5SvL5XhGI5WtImd7r4=,tag:52j22WB2m74i73rXf8NDRQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:Lo8Kx8GOY9k=,iv:sjoeWblYfAKwYbakwC8OEjXLI8GOz+wUF4WLcJ9fs/0=,tag:Q9W2KbKXx7fAlQqduZpYQA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:EGwgS0vBuEVO3cug,iv:hw135ci6T12oU6TyDN99bZyrG5BoE95z0hYDgQ8zWsE=,tag:hriCdh+oxuqX0zMSm/jEZg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:QAsppQit5S4X,iv:MJcqDevVH0lW8kUYwLpO+UpqBQ3oirjluMkZ5oyV538=,tag:itYxMl2VlcPSfO89KwlS+g==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:AS1Px2IvHHo7,iv:RIcRZV9uYNmny0I+Am1HRw3IGKAdMPdbsSqI2bOu0ok=,tag:VgfOWmPPvDgOpBq/B0ELFA==,type:str]
-    GEOIPUPDATE_ACCOUNT_ID: ENC[AES256_GCM,data:55OuCUEZ,iv:7Ib2zZLW+fC6DeFRQ6jBjx+6FipuUCDsDHanIbOPXBU=,tag:zd6cb4c23F3fpQILySXyJw==,type:str]
-    GEOIPUPDATE_LICENSE_KEY: ENC[AES256_GCM,data:0wIyDV+1MLKqdpqaa1s8nQ==,iv:8ZWZbz7AcRhGHMsf8AqLWHIiu6S1Xj4MWdjfk0FU77k=,tag:7Z0V921Wdf9DH3UIfm+a6w==,type:str]
-    EDITIONS: ENC[AES256_GCM,data:Sgoq8609iTeeWD0zUQgAPKU5sT/V92nq8YpHD9fNKlp9zvayXtaCdf5TdA==,iv:R7/n0bIP31N9CGfj1ccPAtk1TfdFD0EotdJszXFY1Rg=,tag:sD3PHZYo9Z8IZj45E+U0hg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:rCK3cwVJ5TPzfOI=,iv:laMLaIIRagvG99lM9t7wZv9uTSdffVETq4mAhpe3D14=,tag:V3mxCbL/SVRKlTk8IBmXOw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7Cf0cRMvJOiIvubS0uxdWuj9EQce,iv:+/Hhv0qvlBujJRgEeVEZlyaaGWmrT+1tq+/AdOegKUo=,tag:mTr1zLOqigwPaOhmWLsJUQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Gj5s3eYDmFbDOzXBOubRrRqkNOOvyGhpyJGPPm0lmpHGDXpuhLCete0XMcvt8BKi/+Dcc5PpvbMfo8fXDkh2KD/PNCi6T2k=,iv:+0QGuKFMgSNOlyaYWyGHdXaMPvEUii1IRrNOo7Rcd00=,tag:Ck9EStYgGU0iEEmkwcXIdQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:hqZoejuXa/cntqIzmlcbMf15V2xyf9UCisx68xhuo4uSHTs=,iv:crXx+s9Slxbl2iOLDu772xp4tkaELK2yJRGEb5B2n60=,tag:7mAeS7tDuxhMCfkcrZ2xUg==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:5DINk5KzBUzwT96d6LqX2x/r9Q==,iv:EFEiUAb2MfYio1Nb5kZpZIB0pSvUtapNUcCnFewSW+0=,tag:qbMgc0Pc1BfEDXKmHDC+hg==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:h7hA3Hpx0G2/+sd2AOaWaNmb9xXl,iv:BLyHKKXJga4WlRcDKA0Nlc7sDpXmuUZBoMws+AHyS50=,tag:rOze4ffSRmyRBI59opUDTg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZeKESFfRnAo=,iv:hMyt8X1Bba9u/6Hmjh/oTIUjf10sXCQJfLm78uqckh0=,tag:btXUNNqeL+gYVGgLVTNu5w==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:WMcww9mBQws=,iv:vGwvnaDztfcrw+KhbbRBZPeJugnwjYa+2OHxDVxAPpk=,tag:Hop37K/K6oDx+jZZ5Kzxjw==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:ivAFwh/p6OBaT/2frBJq4hk9G/J/TNx2MvQPnCc5JwL4uXaRv1zhPpbeJoDyEX826EoOOk0LPu2QLZdCVemiKw==,iv:D0SqdY1rmuoscsxOqwpK//VxR3Syg74GZgRthDKSOwo=,tag:A78RMamc3Kq3yHxi8eZvWw==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:P8JgR8JWdflNiP9nhgfc8JGqWMmHJ6JpM98lV3gb4I31dLUlKnb2IEeLarKW3QtZDczhBcda0QJ3UOAmiIw0bQ==,iv:ldxu2WErJRv76QDdAPM1iDlDJw8haKUrOFpldNphmVE=,tag:TlaVKBIg+vL3ddQCmRtfTA==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:1aSvFU8meGG+,iv:k1KsSnFrDkMAgAumwNwKGAXsWA5I3x0Jsn+Ptt35IrY=,tag:K0CTk6XqMkZv7w6gEuf6Ag==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:B8RuRd4foSRmmQYKF9kH,iv:gr10Hk4T8b6kHhYEPPxK7rMPHQrtCPzkVhkbcfA3b0A=,tag:lpsEyYks0GlNcnHVgVODFQ==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:UHovd84VKmnqC0tmg0TdMQALwYAu89rhLpcLZdidxeGaSVmD6wI+/FdTsPAbygyvSpU=,iv:HikVcA+zr/vHxz4jSzM/DGAU7mhwVpTF8PVnoPsQyN0=,tag:59aw5f5NwZbpL3ZnppC57A==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:SWFHn8L7+82Mg7X2uSM=,iv:BXKenjS0w1U3ojBQ9Ow1kUGjUY/kGOQCG1aqEegChcs=,tag:xWtkpZXljr6AE9vban5+xA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:SKSWdFOuPRG36y4ubNJ6U8h/URA=,iv:kPH08IsUdQFjQ9Ml/coUHXpA47MKAzqo7coZdqIgjE0=,tag:h9OtskHkgtNA50++SLe/jg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:6une1O4Wj1o=,iv:wQqWDg/d7F0S/KVkmvKX2NEG5PpRlofCxbF6WfgJrjg=,tag:wTxBKnZEas3sP5L5cPE4Rg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:4Ruwi+S/rTPlm5xb,iv:KHMd5grS6H21GX1mfUopJJNF8PNTb+3B0aQKCPkfb/Q=,tag:hzcu35UlcETlvLX6XiVmmw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:x91bq/Be4Hki,iv:MENWTzuDfD6vxVNu+0UpZdeFqLm+wz14Uto3k3lo1so=,tag:fGYYh4ApO2U6nwPzujThbg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:ktqV0o7u2zp+,iv:L+009pDftqn5t00RdBHh/8z28PSiReycB9IhAjjXiyw=,tag:Q66D+qf6GJ/6x1Bydnue+A==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TemsbD2uGA==,iv:BLQia1x1/o7T8SRNzuUd+HCnAG2+fb3zwKZgJ/p9bGI=,tag:C/M9P26/+NnHl+YWDGStpw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Gadmv76y0Xws,iv:TwdY1qBZbw9swLHSSpBRpIgisi8EgpBxBGg1G6AXMjc=,tag:898xWf1CbOZ+5AoZ/FSRrQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -35,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbGQ2N2pTakFGREpURE5U
-            RFIvMXRSRVhDdWZoVmVNM05xUHY3RG9vWWdNCmhHZmRIM1RHUndoWkkyY2JxZmZ5
-            ZkZXK2w5QXNNUkJaRENSUS9MTnRzTlUKLS0tIGF4Ky9Na2tIL25ISFVXb1JDdm82
-            N3g1c1BZN1RnVmgyRkdaRkNIWmpkOG8KZksy56GDYRvUOyxSRvif3cDdcPS+mYJ3
-            iw4xMm/5bsoTQ2ZR6IV/GOE0Cxxek5ElULfwQe/1x+O6hOMjzg74lw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpTWxPUHZrVFlzbUYvQVVW
+            ODBjcTV5Mm5IeW5RTGZjVHcrakVzT3VvMzIwCjJwYjVzQXI1QWwxeTgzNEU1MGYz
+            ZlU5aVdRcVAvck1Bc1M3bXIydkE2Qm8KLS0tIFhxRjFhR3ArVnFSWk5iU2tNaXlx
+            QWMrWE9VNi9COE1kU1o4eVBhZjFYRG8KnvL05KtQyb1hPzoK/09rHRPopd+lJztz
+            d6ZINRDiLbDkzwqQVjrQYtjEjjocSHUmF35C7GZvw/anYsGySOLjpQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-01T04:33:44Z"
-    mac: ENC[AES256_GCM,data:V1Vl0kSn8Gz/Ir7Ogmkm+bVpYOw6K8711hl5jb/bO+7CHyuqToTDMha0yL0hNL9hquvLpAqJ7Z5jIMOepxj07QEfqUxmOiKURPRpCX1yAdplHpAyaY4VtgP3IMCnjBZokpmjbRWA+nsN/9QpCZhE/cR3HzVWiVDFN2h/g5do0/4=,iv:ceXhw8dgkBC5ALRduZ7I+8gTQhlqouRqICr07IYCg2s=,tag:4CVsXDMU9hrVu35Lc8pSOA==,type:str]
+    lastmodified: "2023-02-08T04:22:55Z"
+    mac: ENC[AES256_GCM,data:pS4Zl8BNDULpXOO4baa3z2NSeYe1znoUNUihCTf24r84UNBM0DggbQTnnNR/mQOPmBvfegNU8UqPxM9LRA50SS9r/R8UJBz3P3TEPNAdrUvX2gJ2W8TFEGVGpHIpatIEUHqIXmubdarHpm32HjDdVcvxFcsHvJm9krG61z6I8/8=,iv:mOy7kegZki52hZnFhd3CzT2o0fSTxW7ptMW4JfkJwAo=,tag:BH6rEUItNTYD+Q8LW/YOWg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
