--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -24,3 +24,5 @@ stringData:
   SECRET_AUTHENTIK_POSTGRES_HOST: ${BOOTSTRAP_AUTHENTIK_POSTGRES_HOST}
   SECRET_AUTHENTIK_POSTGRES_USERNAME: ${BOOTSTRAP_AUTHENTIK_POSTGRES_USERNAME}
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ${BOOTSTRAP_AUTHENTIK_POSTGRES_PASSWORD}
+  SECRET_POSTGRES_USERNAME: ${BOOTSTRAP_POSTGRES_USERNAME}
+  SECRET_POSTGRES_PASSWORD: ${BOOTSTRAP_POSTGRES_PASSWORD}
