--- a/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
@@ -19,6 +19,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    # image:
+    #   repository: ghcr.io/onedr0p/sonarr-develop
+    #   tag: 4.0.0.356@sha256:c7d3cd0d6b87673b5cf92e4bce71df22608a314a1c4f14fbd6bd14c74ad7af4a
     persistence:
       size: "256Mi"
       storageClass: longhorn
