--- a/kubernetes/apps/default/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/helmrelease.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: cloudnative-pg
-  namespace: dev
+  namespace: default
 spec:
   interval: 15m
   chart:
