--- a/kubernetes/apps/default/nginx/app/ingress.yaml
+++ b/kubernetes/apps/default/nginx/app/ingress.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: default
   annotations:
     hajimari.io/enable: "true"
-    # external-dns.home.arpa/enabled: "true"
-    # external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    # external-dns.alpha.kubernetes.io/hostname: www.${SECRET_DOMAIN}
+    external-dns.home.arpa/enabled: "true"
+    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.alpha.kubernetes.io/hostname: www.${SECRET_DOMAIN}
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
