--- a/kubernetes/apps/networking/authentik/app/ingress.yaml
+++ b/kubernetes/apps/networking/authentik/app/ingress.yaml
@@ -3,10 +3,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    external-dns/is-public: "true"
-    external-dns.home.arpa/enabled: "true"
-    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: auth.${SECRET_DOMAIN}
+    #external-dns/is-public: "true"
+    external-dns.home.arpa/enabled: "false"
+    # external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    # external-dns.alpha.kubernetes.io/hostname: auth.${SECRET_DOMAIN}
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:account-security-outline
     cert-manager.io/cluster-issuer: letsencrypt-production
