--- a/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
@@ -7,6 +7,8 @@ metadata:
   # app.kubernetes.io/managed-by: helm
 spec:
   interval: 5m
+  updateStrategy:
+    type: Recreate
   chart:
     spec:
       chart: helm-dashboard
