--- a/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
@@ -22,6 +22,9 @@ spec:
       namespace: longhorn-system
 
   values:
+    ## @param.updateStrategy.type Set up update strategy for helm-dashboard installation.
+    ## Set to Recreate if you use persistent volume that cannot be mounted by more than one pods to make sure the pods is destroyed first.
+    ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
     updateStrategy:
       type: Recreate
     # ingress:
