--- a/kubernetes/apps/networking/authentik/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authentik/app/helm-release.yaml
@@ -10,7 +10,8 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.goauthentik.io/
       chart: authentik
-      version: 2022.12.1
+      #version: 2022.12.1
+      version: 2023.1.2
       sourceRef:
         kind: HelmRepository
         name: authentik
