postgres 1st attempt

--- a/kubernetes/apps/default/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/cluster/cluster.yaml
@@ -1,21 +1,39 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.trux.dev/cluster_v1.json
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: postgres
-  namespace: dev
+  namespace: default
 spec:
   instances: 3
-  imageName: ghcr.io/cloudnative-pg/postgresql:14.5
+  imageName: ghcr.io/cloudnative-pg/postgresql:15.1
   primaryUpdateStrategy: unsupervised
   storage:
     size: 20Gi
-    storageClass: local-path
+    storageClass: longhorn
   superuserSecret:
-    name: cloudnative-pg-secret
-  postgresql:
-    parameters:
-      max_connections: "300"
-      shared_buffers: 512MB
+    name: cloudnative-pg
   monitoring:
-    enablePodMonitor: true
+    enablePodMonitor: false
+# ---
+# apiVersion: postgresql.cnpg.io/v1
+# kind: Cluster
+# metadata:
+#   name: postgres
+#   namespace: default
+# spec:
+#   instances: 3
+#   imageName: ghcr.io/cloudnative-pg/postgresql:14.5
+#   primaryUpdateStrategy: unsupervised
+#   storage:
+#     size: 20Gi
+#     storageClass: local-path
+#   superuserSecret:
+#     name: cloudnative-pg-secret
+#   postgresql:
+#     parameters:
+#       max_connections: "300"
+#       shared_buffers: 512MB
+#   monitoring:
+#     enablePodMonitor: true
