--- a/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/app/kustomization.yaml
@@ -1,9 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: dev
+namespace: default
 resources:
-  - ./externalsecret.yaml
+  - ./postgres.sops.yaml
   - ./helmrelease.yaml
 configMapGenerator:
   - name: cloudnative-pg-dashboard
