--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -27,7 +27,7 @@ resources:
   - ./nfs-subdir-external-provisioner.yaml
   - ./portainer.yaml
   - ./prometheus-community.yaml
-  # - ./rook-ceph.yaml
+  - ./runix.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
   - ./traefik.yaml
