--- a/kubernetes/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/apps/default/pgadmin/ks.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps-pgadmin
+  name: cluster-apps-pgadmin
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
@@ -9,30 +9,13 @@ spec:
   path: ./kubernetes/apps/default/pgadmin/app
   sourceRef:
     kind: GitRepository
-    name: flux-system
-  interval: 30m
-  prune: false
-  wait: true
-  timeout: 5m
+    name: home-kubernetes
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: pgadmin
       namespace: default
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-  name: apps-pgadmin-config
-  namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
-spec:
-  dependsOn:
-    - name: apps-pgadmin
   interval: 30m
-  path: ./kubernetes/apps/default/pgadmin/config
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+  prune: false
+  wait: true
+  timeout: 5m
