--- a/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
         hajimari.io/icon: "pier-crane"
         external-dns.home.arpa/enabled: "true"
         external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-        external-dns.alpha.kubernetes.io/hostname: pgadmin.${SECRET_DOMAIN}
+        external-dns.alpha.kubernetes.io/hostname: portainer.${SECRET_DOMAIN}
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
       hosts:
